[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdf_utils"
version = "0.0.1"
authors = [
    { name="Minh Nguyen", email="minh@mail.minhnh.com" }
]
description = """
Tools for managing RDF resources and common metamodels.
"""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]
dependencies = [
  "rdflib>=7.1.0",
  "pyshacl",
  "platformdirs",
]
[project.optional-dependencies]
distrib = [
  "numpy",
  "scipy",
]
docs = [
  "pathlib",                      # API generation script
  "mkdocs-material",              # material theme
  "mkdocs-awesome-pages-plugin",  # allow short hands for loading all markdowns
  "mkdocstrings[python]",         # render API pages for Python
  "mkdocs-literate-nav",          # summary API page
  "mkdocs-gen-files",             # generate API files
  "mkdocs-section-index",         # generate index for API
]
[project.urls]
"Homepage" = "https://github.com/minhnh/rdf-utils"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
